--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "framer-motion": "^5.5.6",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.1.2"
+    "react-uuid": "^1.0.2"
   },
   "devDependencies": {
     "@iconify/react": "^3.1.1",
